--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,29 @@ body {
 img {
   padding: var(--space);
   background: var(--base);
-  filter:blur(var(--blur));
+  filter: blur(var(--blur));
   margin-top: 40px;
 }
 h1 > span {
   color: var(--base);
 }
 label {
-margin-left: 20px;
-margin-top: 20px;;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 20px;
+    align-content: flex-start;
+    margin-bottom: 45px;
+  }
+  label {
+    font-size: 15px;
+    display: flex;
+    flex:1;
+  }
+  img{
+    width: 350px;
+  }
 }
