--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --base: #ffc600;
+  --base: #4f0602;
   --space: 10px;
   --blur: 10px;
 }
@@ -25,7 +25,7 @@ label {
 @media (max-width: 900px) {
   h1 {
     font-size: 20px;
-    align-content: flex-start;
+    align-items: flex-start;
     margin-bottom: 45px;
   }
   label {
@@ -34,6 +34,8 @@ label {
     flex:1;
   }
   img{
-    width: 350px;
+    width: 450px;
+    height: 100%;
+   
   }
 }
